--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,10 +1,10 @@
 {
   "id": "Ducofocus.modbus",
   "sdk": 3,
-  "version": "0.1.1",
+  "version": "0.2.0",
   "compatibility": ">=5.0.0",
   "name": {
-    "en": "Ducobox fucus"
+    "en": "Duco"
   },
   "description": {
     "en": "World of Oxygen."
@@ -20,7 +20,7 @@
     ]
   },
   "author": {
-    "name": "tjarb"
+    "name": "tjarco boerkoel"
   },
   "contributors": {},
   "bugs": {
